Alignment and border bugs fixed

--- a/styles/components/_order-now.scss
+++ b/styles/components/_order-now.scss
@@ -19,7 +19,7 @@
     div > input,
     div > textarea {
       border: none;
-      padding: 20px;
+      padding: 6px 12px;
       border-radius: 10px;
       border: 2px solid grey;
       font-size: 14px;
