--- a/styles/components/_search-recipes.scss
+++ b/styles/components/_search-recipes.scss
@@ -3,17 +3,22 @@
   color: #ffff;
   @extend .paralax-effect;
   @extend .flex-center-column;
+  text-align: center;
   .search-container {
     form {
       @extend .flex-center-column;
-
+      
       div {
         padding: 10px ;
         input {
-          border: 0;
-          box-shadow: 0px 0px 6px 2px $box-shadow-color;
-          margin-left: 20px;
-          height: 20px;
+          border: none;
+          padding: 6px 12px;
+          border-radius: 10px;
+          border: 2px solid grey;
+          font-size: 14px;
+        }
+        p {
+          font-weight: 500;
         }
         #number-of-recipes {
           width: 50px;
