--- a/styles/style.css
+++ b/styles/style.css
@@ -1010,7 +1010,7 @@ nav .logo-image:hover {
 .order-form-container .order-form div > input,
 .order-form-container .order-form div > textarea {
   border: none;
-  padding: 20px;
+  padding: 6px 12px;
   border-radius: 10px;
   border: 2px solid grey;
   font-size: 14px;
@@ -1068,6 +1068,7 @@ nav .logo-image:hover {
 .recipe-search {
   background-image: url(../../assets/images/687361.jpeg);
   color: #ffff;
+  text-align: center;
 }
 
 .recipe-search .search-container form div {
@@ -1075,11 +1076,15 @@ nav .logo-image:hover {
 }
 
 .recipe-search .search-container form div input {
-  border: 0;
-  -webkit-box-shadow: 0px 0px 6px 2px #4F4F4F;
-          box-shadow: 0px 0px 6px 2px #4F4F4F;
-  margin-left: 20px;
-  height: 20px;
+  border: none;
+  padding: 6px 12px;
+  border-radius: 10px;
+  border: 2px solid grey;
+  font-size: 14px;
+}
+
+.recipe-search .search-container form div p {
+  font-weight: 500;
 }
 
 .recipe-search .search-container form div #number-of-recipes {
